# polymarket-terminal

./: .env.example  .gitignore  pyproject.toml
src/: main.py
src/config/: constants.py  env.py  settings.py
src/data/: candle_aggregator.py  clob_client.py  gamma_client.py  market_cache.py  websocket_feed.py
src/models/: candle.py  market.py  order.py  orderbook.py  position.py  signal.py
src/signals/: base.py  bollinger.py  boundary.py  composite.py  macd.py  obi.py  obv.py  rsi.py  volume.py  vwap.py
src/storage/: scalp_csv_logger.py  session_state.py  trade_log.py
src/trading/: arbitrage.py  engine.py  executor.py  paper_broker.py  position_tracker.py  risk.py  scalper.py  stop_loss.py
src/ui/: app.py  styles.tcss
src/ui/screens/: main_screen.py  market_search.py  order_entry.py  settings_screen.py
src/ui/widgets/: arbitrage_alert.py  chart_panel.py  command_input.py  header_bar.py  orderbook_panel.py  pnl_panel.py  position_table.py  signal_panel.py  status_bar.py  trade_tape.py  watchlist.py
tests/: conftest.py
tests/test_data/: test_candle_aggregator.py  test_market_cache.py
tests/test_models/: test_candle.py  test_market.py  test_orderbook.py  test_position.py  test_signal.py
tests/test_signals/: test_bollinger.py  test_boundary.py  test_composite.py  test_macd.py  test_obi.py  test_obv.py  test_rsi.py  test_volume.py  test_vwap.py
tests/test_trading/: test_arbitrage.py  test_paper_broker.py  test_position_tracker.py  test_risk.py  test_stop_loss.py
