[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-terminal"
version = "0.1.0"
description = "Bloomberg Terminal-style TUI for Polymarket prediction market trading"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.85.0",
    "textual-plotext>=0.2.1",
    "py-clob-client>=0.18.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
polymarket = "src.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
